--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "3.6.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.6.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "my-v0-project": "file:",
